--- a/gnssrtk/setup.cfg
+++ b/gnssrtk/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/gnssrtk_ros
+script_dir=$base/lib/gnssrtk
 [install]
-install_scripts=$base/lib/gnssrtk_ros
+install_scripts=$base/lib/gnssrtk
